WexGit/Wex_DX/force-app/main/default/objects/CCH__c/CCH__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CCH</label>
</CustomObject>