WexGit/Wex_DX/force-app/main/default/objects/CCH__c/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>API Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>