WexGit/Wex_DX/force-app/main/default/objects/CCH__c/fields/API_Username__c.field-meta.xml
<CustomField>
    <fullName>API_Username__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>API Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>