WexGit/Wex_DX/force-app/main/default/objects/CCH__c/fields/Message_Address_Correction__c.field-meta.xml
<CustomField>
    <fullName>Message_Address_Correction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message Address Correction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>