WexGit/Wex_DX/force-app/main/default/objects/CCH__c/fields/Message_Address_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Message_Address_Invalid__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message Address Invalid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>